<resources>
    <string name="app_name" translatable="false">BeauTiful k-pop quizzeS</string>

    <string name="start_quiz">Start quiz</string>
    <string name="settings">Settings</string>
    <string name="button_text_results">Results</string>

    <string name="difficulty">Difficulty of questions</string>
    <string name="random_difficulty">Random</string>
    <string name="usual_difficulty">Usual</string>
    <string name="difficult_difficulty">Difficult</string>
    <string name="set_difficulty">The difficulty is set</string>
    <string name="no_questions_repetition">No questions repetition</string>
    <string name="set_no_questions_repetition">The \"No questions repetition\" option is enabled</string>
    <string name="unset_no_questions_repetition">The \"No questions repetition\" option is disabled</string>
    <string name="reset_passed_question">Reset passed questions?</string>
    <string name="developers_and_licenses">Developers and Licenses</string>

    <string name="developers">Developers</string>
    <string name="creators_content_description" translatable="false">JustCircle Prod.</string>
    <string name="licenses">Licences</string>

    <string name="confirmation">Confirmation</string>
    <string name="close_dialog_content_description">Closing the dialog</string>
    <string name="reset_confirmation_question">Do you really want to reset the passed questions?</string>
    <string name="confirm">Confirm</string>
    <string name="reset_n_passed_question">Passed questions have been reset: %1$d</string>

    <string name="tv_choose_category">Select a category</string>
    <string name="random_questions">Random questions</string>
    <string name="text_questions">Text questions</string>
    <string name="video_questions">Guess clip</string>
    <string name="image_questions">Guess by photo</string>
    <string name="audio_questions">Guess song</string>

    <string name="difficulty_warning">It is necessary to switch the difficulty to \"Random\" or \"Difficult\"</string>

    <string name="tv_loading_quiz_text">Preparing the most interesting questions</string>

    <string name="tv_out_of_questions_hint_text">It looks like you have answered all the questions in this category!\You can turn off the \"No repeat\" option or reset the passed questions and come back again :)</string>

    <string name="tv_points_label">Points: %1$d</string>
    <string name="tv_score_label">Total points: %1$d</string>

    <string name="tv_loading_result_text">Counting points</string>

    <string name="tv_text_your_result">Current score</string>
    <string name="tv_text_best_result">Best score</string>

    <string-array name="texts_for_bad_result">
        <item>We believe in you!</item>
        <item>You can do it!</item>
        <item>Believe in yourself!</item>
        <item>Next time it will work!</item>
        <item>Don\'t give up!</item>
    </string-array>

    <string-array name="texts_for_good_result">
        <item>It\'s working out great!</item>
        <item>Good job!</item>
        <item>A little more!</item>
        <item>Almost a record!</item>
        <item>Don\'t give up!</item>
    </string-array>

    <string-array name="texts_for_best_result">
        <item>A new record!</item>
        <item>Hurray!</item>
        <item>Congratulations!</item>
        <item>Good job!</item>
        <item>We had no doubt!</item>
    </string-array>

    <string name="share_result">Share result</string>
    <string name="for_sharing_result">Look! My result in the category \"%1$s\" is %2$d. Can you score more?</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.justcircleprod.beautifulkpopquizzes</string>
    <string name="sharing_result_not_available">The function is currently unavailable</string>

    <string name="repeat_quiz">Repeat quiz</string>

    <string name="to_categories_text">Go to categories</string>

    <string name="back">Back</string>

    <string name="brand_image_content_description">Brand Image</string>
    <string name="image_for_question_description">Image for the question</string>
    <string name="video_for_question_description">Video for the question</string>
    <string name="audio_question_content_description">Audio Question icon</string>
    <string name="result_image_content_description">Image for the result</string>
</resources>