<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textColor="@color/text_color"
            android:textSize="@dimen/dialog_title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_dialog_content_description"
            android:src="@drawable/icon_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_element_top_margin"
        android:gravity="center"
        android:text="@string/reset_confirmation_question"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/hint_text_size" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/reset_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_element_top_margin"
        android:indeterminate="true"
        android:progressTint="@color/progress_color"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_submit_btn_top_margin"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/button_elevation"
        android:padding="@dimen/button_pudding"
        android:stateListAnimator="@null"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/btn_ripple_color"
        app:strokeColor="@color/btn_stroke_color"
        app:strokeWidth="@dimen/button_stroke_width" />

</LinearLayout>