<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/brand_color"
        android:textSize="@dimen/brand_text_size"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inner_layout_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/random_questions"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/hint_text_size" />

            <TextView
                android:id="@+id/no_category_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/result_bottom_margin"
                android:gravity="center_horizontal"
                android:textColor="@color/result_color"
                android:textSize="@dimen/result_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_questions"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/hint_text_size" />

            <TextView
                android:id="@+id/text_questions_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/result_bottom_margin"
                android:gravity="center_horizontal"
                android:textColor="@color/result_color"
                android:textSize="@dimen/result_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/image_questions"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/hint_text_size" />

            <TextView
                android:id="@+id/image_questions_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/best_score_margin_bottom"
                android:gravity="center_horizontal"
                android:textColor="@color/result_color"
                android:textSize="@dimen/result_text_size"
                android:textStyle="bold" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_categories"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/button_elevation"
                android:insetTop="0dp"
                android:padding="@dimen/button_pudding"
                android:stateListAnimator="@null"
                android:text="@string/to_categories_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:rippleColor="@color/btn_ripple_color"
                app:strokeColor="@color/btn_stroke_color"
                app:strokeWidth="@dimen/button_stroke_width" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>