<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fillViewport="true"
    tools:context=".ui.categories.CategoriesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/brand_margin_bottom"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/brand_color"
            android:textSize="@dimen/brand_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/root_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/root_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_margin"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55">

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/inner_layout_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/hint_bottom_margin"
                    android:gravity="top|center_horizontal"
                    android:text="@string/tv_choose_category"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/hint_text_size" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginBottom="@dimen/line_bottom_margin"
                    android:background="@color/line_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/random_questions"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/button_elevation"
                    android:padding="@dimen/button_pudding"
                    android:stateListAnimator="@null"
                    android:text="@string/random_questions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:rippleColor="@color/btn_ripple_color"
                    app:strokeColor="@color/btn_stroke_color"
                    app:strokeWidth="@dimen/button_stroke_width" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_questions"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/button_elevation"
                    android:padding="@dimen/button_pudding"
                    android:stateListAnimator="@null"
                    android:text="@string/text_questions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:rippleColor="@color/btn_ripple_color"
                    app:strokeColor="@color/btn_stroke_color"
                    app:strokeWidth="@dimen/button_stroke_width" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/image_questions"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/button_elevation"
                    android:padding="@dimen/button_pudding"
                    android:stateListAnimator="@null"
                    android:text="@string/image_questions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:rippleColor="@color/btn_ripple_color"
                    app:strokeColor="@color/btn_stroke_color"
                    app:strokeWidth="@dimen/button_stroke_width" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/audio_questions"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/button_elevation"
                    android:padding="@dimen/button_pudding"
                    android:stateListAnimator="@null"
                    android:text="@string/audio_questions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:rippleColor="@color/btn_ripple_color"
                    app:strokeColor="@color/btn_stroke_color"
                    app:strokeWidth="@dimen/button_stroke_width" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/video_questions"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:elevation="@dimen/button_elevation"
                    android:padding="@dimen/button_pudding"
                    android:stateListAnimator="@null"
                    android:text="@string/video_questions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:rippleColor="@color/btn_ripple_color"
                    app:strokeColor="@color/btn_stroke_color"
                    app:strokeWidth="@dimen/button_stroke_width" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>